# SmartHouse.Logging.Stm32

./: CMakeLists.txt  CMakePresets.json
public/SmartHouse/Logging/Stm32/: DummyDebuggerDetector.h  FuncLogSink.h  FuncTimestampProvider.h  GpioDebuggerDetector.h  LogManager.h  Logger.h  MemoryLogSink.h  SwvLogSink.h  TickTimestampProvider.h  UartLogSink.h
src/: CMakeLists.txt
src/SmartHouse/Logging/Stm32/: CounterTimestampProvider.h  DummyDebuggerDetector.h  GpioDebuggerDetector.h  GpioDetector.h  LogLevel.cpp  LogLevel.h  LogManager.cpp  LogManager.h  LogSinkMemBuf.h  LogSinkSerialWire.h  LogSinkUart.h  Logger.h  MemBufLogSink.h  Singleton.h  SmallFormatter.h  SprintfFormatter.h  SwvLogSink.h  TickTimestampProvider.h  UartLogSink.h
test/: CMakeLists.txt
test/SmartHouse/Logging/Stm32/: LogManagerTest.cpp  MockTimestampProvider.h  SmallFormatterTest.cpp
test/TestUtils/: Logging.cpp  Logging.h  TestModule.cpp
